--- a/BidaSius/BidaSius.csproj
+++ b/BidaSius/BidaSius.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="CaptureHelper.cs" />
     <Compile Include="FoundRectangles.cs" />
+    <Compile Include="image.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="image.Designer.cs">
+      <DependentUpon>image.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,9 @@
     <Compile Include="TargetDrawHelper.cs" />
     <EmbeddedResource Include="CameraCapture.resx">
       <DependentUpon>CameraCapture.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="image.resx">
+      <DependentUpon>image.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
